solutions.html added cards at team.html edited edited contact.html

--- a/finter-html/contact.html
+++ b/finter-html/contact.html
@@ -121,32 +121,30 @@
             </h1>
         </div>
 
-        <div class="container text-center">
-            <div class="row">
-                <div class="col-sm-12 col-md-5">
-                    <img style="padding: 0 0 60px 0" src="./images/logo.png" alt="logo">
-                    <p>
-                        <strong>ТОВ "ФІЛД ФОРС КОНСАЛТИНГ"</strong>
-                    </p>
-                    <p>
-                        Київ, Україна, 02095, <br>вул. Княжий Затон, 9А, офіс 369.
-                    </p>
-                    <p><a href="tel:+380994218007">
-                        +38(099) 421 80 07
-                    </a></p>
-
-                    <a href="mailto:m.gronskaya@fieldforce.consulting">
-                        <span>m.gronskaya@fieldforce.consulting</span>
-                    </a>
+        <div class="container ">
+            <div class="row justify-content-start">
+                <div class="col-12 col-lg ">
+                    <img class="my-3" src="./images/logo.png" alt="logo">
+                    <address>
+                        <p>
+                            <strong>ТОВ "ФІЛД ФОРС КОНСАЛТИНГ"</strong>
+                        </p>
+                        <p>
+                           02095, Україна, Київ, <br>вул. Княжий Затон, 9А, офіс 369.
+                        </p>
+                        <p class="pt-3"><a href="tel:+380994218007">+38(099) 421 80 07</a></p>
+                        <a href="mailto:m.gronskaya@fieldforce.consulting">
+                            <span>m.gronskaya@fieldforce.consulting</span>
+                        </a>
+                    </address>
                 </div>
 
-
-                <div class="col-sm-12 col-md-7">
+                <div class="col-12 col-lg-7 ">
                     <div class="form_container">
-                            <h2 class="md mt-3">Написати нам</h2>
-                            <p class="pb-2">Ми відкриті для питань і уточнень</p>
+                        <h2 class="mt-4 text-center">Написати нам</h2>
+                        <p class="pb-2 text-center">Ми відкриті для питань і уточнень</p>
                         <form action="">
-                            <div class="form-row">
+                            <div class="form-row justify-content-start">
                                 <div class="form-group col">
                                     <input type="text" class="form-control" placeholder="Ім'я та прізвище"/>
                                 </div>
@@ -179,16 +177,16 @@
     </div>
 </section>
 
-    <!--Map-->
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col map">
-                <iframe class="map"
-                        src="https://www.google.com/maps/d/u/0/embed?mid=1Teb6LQQ4XvvEBqw7Jxmj1bKKS5K51Xc&ehbc=2E312F"
-                        height="500px"></iframe>
-            </div>
+<!--Map-->
+<div class="container-fluid">
+    <div class="row">
+        <div class="col map">
+            <iframe class="map"
+                    src="https://www.google.com/maps/d/u/0/embed?mid=1Teb6LQQ4XvvEBqw7Jxmj1bKKS5K51Xc&ehbc=2E312F"
+                    height="500px"></iframe>
         </div>
     </div>
+</div>
 
 <!-- end contact section -->
 
