--- a/finter-html/team.html
+++ b/finter-html/team.html
@@ -118,6 +118,7 @@
     </header>
     <!-- end header section -->
 </div>
+<!--  team section -->
 
 <section class="team_section layout_padding">
     <div class="container">
@@ -147,57 +148,45 @@
             <li>Тощо</li>
         </ul>
 
+        <div class="card-deck">
+            <div class="row mx-lg-n5 mx-auto">
 
-        <div class="row">
-            <div class="col-md-4 col-sm-6 mx-auto">
-                <div class="box">
-                    <div class="img-box">
-                        <img src="images/team/vyacheslav.jpg" alt="Team">
-                    </div>
-                    <div class="detail-box">
-                        <h5 class="mb-3">
-                            Шостак Вячеслав
-                        </h5>
-                        <h6 class="mb-3">
-                            УПРАВЛЯЮЧИЙ ПАРТНЕР
-                        </h6>
-                        <p>Майстер-тренер, експерт в автомобільному та аграрному бізнесі, маркетингу та менеджменті
-
-                            Guest-speaker </p>
+                <div class="col-xl-4 col-md-6 mx-auto px-lg-2" style="max-width: 480px">
+                    <div class="card mr-5 my-4 bg-light">
+                        <img src="images/team/vyacheslav.jpg" class="card-img-top" alt="team member">
+                        <div class="card-body">
+                            <h5 class="card-title" style="color: #004445"><strong>ШОСТАК ВЯЧЕСЛАВ</strong></h5>
+                            <h6 class="card-subtitle mt-2 pb-2 border-bottom border-darkgreen">УПРАВЛЯЮЧИЙ ПАРТНЕР</h6>
+                            <p class="card-text mt-2">Майстер-тренер. Експерт в автомобільному та аграрному бізнесі,
+                                маркетингу та менеджменті.
+                                Guest-speaker.</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-4 col-sm-6 mx-auto">
-                <div class="box">
-                    <div class="img-box">
-                        <img src="images/team/maria.jpg" alt="Team">
-                    </div>
-                    <div class="detail-box">
-                        <h5 class="mb-4">
-                            Гронська Марія
-                        </h5>
-                        <h6 class="mb-4">
-                            ДИРЕКТОР ПО РОБОТІ З КЛІЄНТАМИ
-                        </h6>
-                        <p>Тренер-консультант <br>
-                            Спеціаліст з питань комунікації та управлінню лояльністю клієнтів</p>
+
+                <div class="col-xl-4 col-md-6 mx-auto px-lg-2" style="max-width: 480px">
+                    <div class="card mr-5 my-4 bg-light">
+                        <img src="images/team/maria.jpg" class="card-img-top" alt="team member">
+                        <div class="card-body">
+                            <h5 class="card-title" style="color: #004445"><strong>ГРОНСЬКА МАРІЯ</strong></h5>
+                            <h6 class="card-subtitle mt-2 pb-2 border-bottom border-darkgreen">ДИРЕКТОР ПО РОБОТІ З
+                                КЛІЄНТАМИ</h6>
+                            <p class="card-text mt-2">Тренер-консультант. <br>
+                                Спеціаліст з питань комунікації та управлінню лояльністю клієнтів.</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-4 col-sm-6 mx-auto">
-                <div class="box">
-                    <div class="img-box">
-                        <img src="images/team/cat.jpg" alt="Team">
-                    </div>
-                    <div class="detail-box">
-                        <h5 class="mb-4">
-                            Шостак Вольт
-                        </h5>
-                        <h6 class="mb-4">
-                            ГОЛОВНИЙ ПО МУРКЕТИНГУ
-                        </h6>
-                        <p>Тренер-консультант <br>
-                            Спеціаліст з питань міміфікації та управлінню лояльністю працівників</p>
+
+                <div class="col-xl-4 col-md-6 mx-auto px-lg-2" style="max-width: 480px">
+                    <div class="card mr-5 my-4 bg-light">
+                        <img src="images/team/cat.jpg" class="card-img-top" alt="team member">
+                        <div class="card-body">
+                            <h5 class="card-title" style="color: #004445"><strong>ШОСТАК ВОЛЬТ</strong></h5>
+                            <h6 class="card-subtitle mt-2 pb-2 border-bottom border-darkgreen">ГОЛОВНИЙ ПО
+                                МУРКЕТИНГУ</h6>
+                            <p class="card-text mt-2">Тренер-консультант. <br>
+                                Спеціаліст з питань міміфікації та управлінню лояльністю працівників.</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -210,9 +199,10 @@
 <!-- info section -->
 <section class="info_section ">
     <div class="container">
-
         <div class="info_bottom">
-            <div class="row">
+            <div class="row justify-content-around">
+
+
                 <div class="col-md-4 col-sm-12">
                     <div class="info_detail">
                         <h5>
