--- a/finter-html/solutions.html
+++ b/finter-html/solutions.html
@@ -57,11 +57,13 @@
                     <a href="mailto:m.gronskaya@fieldforce.consulting">
                         <i class="fa fa-envelope" aria-hidden="true"></i>
                         <span>
-                m.gronskaya@fieldforce.consulting
+                 m.gronskaya@fieldforce.consulting
               </span>
                     </a>
                 </div>
-
+                <!--
+                social block
+                -->
                 <!--                <div class="social_box">
                                     <a href="">
                                         <i class="fa fa-facebook" aria-hidden="true"></i>
@@ -96,12 +98,11 @@
                             <li class="nav-item ">
                                 <a class="nav-link" href="index.html">Головна</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="about.html">Наші послуги</a>
-                            </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="clients.html">Наші клієнти<span
-                                        class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="about.html">Наші послуги<span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="clients.html">Наші клієнти</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="team.html">Команда</a>
@@ -116,197 +117,81 @@
         </div>
     </header>
     <!-- end header section -->
-
 </div>
 
-<!-- client section -->
 
-<section class="client_section layout_padding">
+<!-- about solutions -->
+<section class="team_section layout_padding">
+    <div class="container">
+        <h1 class="heading_container heading_center">Наша експертиза - навчання</h1>
+        <p class="pt-4">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A asperiores blanditiis, dignissimos illum impedit
+            laboriosam quod recusandae vero. Accusamus corporis fugit ipsam libero maxime nostrum odio perferendis quod
+            repellat, unde? Corporis esse fugit harum iusto labore laboriosam libero non repellendus veritatis
+            voluptate.
+            Consequuntur dignissimos excepturi explicabo facere fugiat ipsam ipsum itaque quidem, velit veritatis. A
+            accusantium
+            alias architecto assumenda atque culpa dolor dolores earum ex excepturi expedita facere incidunt ipsam
+            laboriosam
+            magni modi molestiae, officia perferendis possimus quaerat quibusdam quos recusandae, rem reprehenderit
+            suscipit vel
+            voluptas voluptate! Amet consequuntur dolore ex libero placeat provident quae rem, sint, veniam voluptate
+            voluptatibus?
+        </p>
+    </div>
+
+    <!-- start carousel -->
     <div class="container ">
-        <div class="heading_container heading_center">
-            <h1 class="pb-3 text-center">
-                Наші клієнти
-            </h1>
-            </div>
-            <p>Досвід роботи з брендами Honda, Hyundai, Citroen, Mazda, Suzuki, Renault, Mercedes Benz, Ford, Nissan,
-                John Deere, Claas, Subaru, ПриватБанк, Backstage, Pottinger, Opel, Skoda та іншими.
-            </p>
-            <p><strong>Географія проектів:</strong></p>
-            <ul class="text-left">
-                <li>Україна</li>
-                <li>Польща</li>
-                <li>Литва</li>
-                <li>Угорщина</li>
-                <li>Білорусь</li>
-                <li>Молдова</li>
-                <li>Азербайджан</li>
-                <li>Казахстан</li>
-            </ul>
-            <p class="text-center pt-3">Експерти <strong>Field Force Consulting</strong> реалізували багато проектів різних масштабів з такими
-                компаніями:
-            </p>
+        <div>
+            <div id="solutions_carousel" class="carousel slide py-5" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="5"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="6"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="7"></li>
+                </ol>
 
-
-        <div id="carouselExample2Controls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <div class="row">
-                        <div class="col-lg-7 col-md-9 mx-auto">
-                            <div class="client_container ">
-                                <div class="img-box">
-                                    <img src="images/clients/renault.png" alt="Renault">
-                                </div>
-                                <div class="detail-box">
-                                </div>
-                            </div>
-                        </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="images/solutions/0.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/solutions/1.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/solutions/2.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/solutions/3.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/solutions/4.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/solutions/5.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/solutions/6.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/solutions/7.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
-                <div class="carousel-item">
-                    <div class="row">
-                        <div class="col-lg-7 col-md-9 mx-auto">
-                            <div class="client_container ">
-                                <div class="img-box">
-                                    <img src="images/clients/john_deere.png" alt="John Deere">
-                                </div>
-                                <div class="detail-box">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="row">
-                        <div class="col-lg-7 col-md-9 mx-auto">
-                            <div class="client_container ">
-                                <div class="img-box">
-                                    <img src="images/clients/nissan.png" alt="Nissan">
-                                </div>
-                                <div class="detail-box">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="carousel-item">
-                    <div class="row">
-                        <div class="col-lg-7 col-md-9 mx-auto">
-                            <div class="client_container ">
-                                <div class="img-box">
-                                    <img src="images/clients/opel.png" alt="Opel">
-                                </div>
-                                <div class="detail-box">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="carousel-item">
-                    <div class="row">
-                        <div class="col-lg-7 col-md-9 mx-auto">
-                            <div class="client_container ">
-                                <div class="img-box">
-                                    <img src="images/clients/cnh.png" alt="CNH Industrial">
-                                </div>
-                                <div class="detail-box">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="carousel-item">
-                    <div class="row">
-                        <div class="col-lg-7 col-md-9 mx-auto">
-                            <div class="client_container ">
-                                <div class="img-box">
-                                    <img src="images/clients/holland.png" alt="New Holland">
-                                </div>
-                                <div class="detail-box">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="carousel-item">
-                    <div class="row">
-                        <div class="col-lg-7 col-md-9 mx-auto">
-                            <div class="client_container ">
-                                <div class="img-box">
-                                    <img src="images/clients/backstage.png" alt="Backstage Beauty Salons">
-                                </div>
-                                <div class="detail-box">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="carousel-item">
-                    <div class="row">
-                        <div class="col-lg-7 col-md-9 mx-auto">
-                            <div class="client_container ">
-                                <div class="img-box">
-                                    <img src="images/clients/case.png" alt="Case IH">
-                                </div>
-                                <div class="detail-box">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="carousel-item">
-                    <div class="row">
-                        <div class="col-lg-7 col-md-9 mx-auto">
-                            <div class="client_container ">
-                                <div class="img-box">
-                                    <img src="images/clients/hyundai.png" alt="Hyundai">
-                                </div>
-                                <div class="detail-box">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="carousel-item">
-                    <div class="row">
-                        <div class="col-lg-7 col-md-9 mx-auto">
-                            <div class="client_container ">
-                                <div class="img-box">
-                                    <img src="images/clients/pottinger.png" alt="Pottinger">
-                                </div>
-                                <div class="detail-box">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-            <div class="carousel_btn-box">
-                <a class="carousel-control-prev" href="#carouselExample2Controls" role="button" data-slide="prev">
-            <span>
-              <i class="fa fa-arrow-left" aria-hidden="true"></i>
-            </span>
+                <a class="carousel-control-prev" href="#solutions_carousel" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
                 </a>
-                <a class="carousel-control-next" href="#carouselExample2Controls" role="button" data-slide="next">
-            <span>
-              <i class="fa fa-arrow-right" aria-hidden="true"></i>
-            </span>
+                <a class="carousel-control-next" href="#solutions_carousel" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
             </div>
-        </div>
-    </div>
 </section>
-
-<!-- end client section -->
+<!--end carousel -->
 
 <!-- info section -->
 <section class="info_section ">
@@ -314,7 +199,7 @@
 
         <div class="info_bottom">
             <div class="row">
-                <div class="col">
+                <div class="col-md-4 col-sm-12">
                     <div class="info_detail">
                         <h5>
                             Про компанію
@@ -328,7 +213,7 @@
                     </div>
                 </div>
 
-                <div class="col">
+                <div class="col-md-4 col-sm-12">
                     <div class="info_detail">
                         <h5>
                             КОНТАКТИ
@@ -349,7 +234,7 @@
                 </div>
 
 
-                <div class="col">
+                <div class="col-md-4 col-sm-12">
                     <div class="">
                         <h5>
                             Сайт
@@ -415,6 +300,7 @@
         integrity="sha256-Zr3vByTlMGQhvMfgkQ5BtWRSKBGa2QlspKYJnkjZTmo=" crossorigin="anonymous"></script>
 <!-- custom js -->
 <script src="js/custom.js"></script>
+
 </body>
 
 </html>
