cards at team.html edited

--- a/finter-html/team.html
+++ b/finter-html/team.html
@@ -151,25 +151,26 @@
         <div class="card-deck">
             <div class="row mx-lg-n5 mx-auto">
 
-                <div class="col-xl-4 col-md-6 mx-auto px-lg-2" style="max-width: 480px">
-                    <div class="card mr-5 my-4 bg-light">
+                <div class="col-xl-4 col-md-6 mx-auto px-lg-2 my-4" style="max-width: 480px">
+                    <div class="card mr-5  bg-light h-100">
                         <img src="images/team/vyacheslav.jpg" class="card-img-top" alt="team member">
                         <div class="card-body">
                             <h5 class="card-title" style="color: #004445"><strong>ШОСТАК ВЯЧЕСЛАВ</strong></h5>
-                            <h6 class="card-subtitle mt-2 pb-2 border-bottom border-darkgreen">УПРАВЛЯЮЧИЙ ПАРТНЕР</h6>
-                            <p class="card-text mt-2">Майстер-тренер. Експерт в автомобільному та аграрному бізнесі,
-                                маркетингу та менеджменті.
+                            <h6 class="card-subtitle mt-2 py-3 border-bottom border-darkgreen">УПРАВЛЯЮЧИЙ ПАРТНЕР</h6>
+                            <p class="card-text mt-2">Майстер-тренер. <br>
+                                Експерт в автомобільному та аграрному бізнесі,
+                                маркетингу та менеджменті. <br>
                                 Guest-speaker.</p>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-xl-4 col-md-6 mx-auto px-lg-2" style="max-width: 480px">
-                    <div class="card mr-5 my-4 bg-light">
+                <div class="col-xl-4 col-md-6 mx-auto px-lg-2 my-4" style="max-width: 480px">
+                    <div class="card mr-5  bg-light h-100">
                         <img src="images/team/maria.jpg" class="card-img-top" alt="team member">
                         <div class="card-body">
                             <h5 class="card-title" style="color: #004445"><strong>ГРОНСЬКА МАРІЯ</strong></h5>
-                            <h6 class="card-subtitle mt-2 pb-2 border-bottom border-darkgreen">ДИРЕКТОР ПО РОБОТІ З
+                            <h6 class="card-subtitle mt-2 py-3 border-bottom border-darkgreen">ДИРЕКТОР ПО РОБОТІ З
                                 КЛІЄНТАМИ</h6>
                             <p class="card-text mt-2">Тренер-консультант. <br>
                                 Спеціаліст з питань комунікації та управлінню лояльністю клієнтів.</p>
@@ -177,12 +178,12 @@
                     </div>
                 </div>
 
-                <div class="col-xl-4 col-md-6 mx-auto px-lg-2" style="max-width: 480px">
-                    <div class="card mr-5 my-4 bg-light">
+                <div class="col-xl-4 col-md-6 mx-auto px-lg-2 my-4" style="max-width: 480px">
+                    <div class="card mr-5 bg-light h-100">
                         <img src="images/team/cat.jpg" class="card-img-top" alt="team member">
                         <div class="card-body">
                             <h5 class="card-title" style="color: #004445"><strong>ШОСТАК ВОЛЬТ</strong></h5>
-                            <h6 class="card-subtitle mt-2 pb-2 border-bottom border-darkgreen">ГОЛОВНИЙ ПО
+                            <h6 class="card-subtitle mt-2 py-3 border-bottom border-darkgreen">ГОЛОВНИЙ ПО
                                 МУРКЕТИНГУ</h6>
                             <p class="card-text mt-2">Тренер-консультант. <br>
                                 Спеціаліст з питань міміфікації та управлінню лояльністю працівників.</p>
