about and solutions ed

--- a/finter-html/about.html
+++ b/finter-html/about.html
@@ -120,54 +120,52 @@
 
 
 <!-- about section -->
-
-<section class="about_section layout_padding">
-    <div class="container-fluid">
+<section class="about_section layout_padding2">
+    <div class="container">
         <div class="row">
-            <div class="col-md-5 offset-md-1">
-                <div class="detail-box pr-md-2">
-                    <div class="heading_container">
-                        <h2 style="margin-bottom: 30px">
-                            Наші послуги
-                        </h2>
-                        <h5>Наша експертиза</h5>
-                        <ul>
-                            <li>Аналіз бізнес-процесів</li>
-                            <li>Побудова/Відновлення бізнес-процесів</li>
-                            <li>Коучінг персоналу (персональний та груповий)</li>
-                            <li>Діагностика персоналу</li>
-                            <li>Розробка стандартів</li>
-                        </ul>
-                        <h5>Системна інтеграція та інтернет-рішення</h5>
-                        <ul>
-                            <li>Система комплексного моніторингу KPI підприємства</li>
-                            <li>Оцінка ефективності інтернет-ресурсів</li>
-                            <li>Оптимізація системи роботи з лідами на підприємствах</li>
-                            <li>Розробка та ведення Telegram боту для оптимізації роботи співробітників</li>
-                        </ul>
-                        <h5>Незалежна оцінка персоналу </h5>
-                        <ul>
-                            <li>Онлайн-тестування</li>
-                            <li>Оцінка потенціалу співробітників</li>
-                            <li>Конкурси професійного майстерства</li>
-                        </ul>
-                        <h5>Технічне навчання персоналу, що працює з технікою</h5>
-                        <ul>
-                            <li>Електрика та електричне обладнання</li>
-                            <li>Гідравліка та гідравлічне обладнання</li>
-                            <li>Дизельне впорскування</li>
-                            <li>Системи комфорту</li>
-                            <li>Тощо</li>
-                        </ul>
-                    </div>
-                    <a href="solutions.html" class="">
-                        Докладніше
-                    </a>
+            <div class="detail-box col-12 col-lg-6 pr-md-2 ">
+                <div class="heading_container">
+                    <h2 class="mb-4">
+                        Наші послуги
+                    </h2>
+                    <h5>Наша експертиза</h5>
+                    <ul>
+                        <li>Аналіз бізнес-процесів</li>
+                        <li>Побудова/Відновлення бізнес-процесів</li>
+                        <li>Коучінг персоналу (персональний та груповий)</li>
+                        <li>Діагностика персоналу</li>
+                        <li>Розробка стандартів</li>
+                    </ul>
+                    <h5>Системна інтеграція та інтернет-рішення</h5>
+                    <ul>
+                        <li>Система комплексного моніторингу KPI підприємства</li>
+                        <li>Оцінка ефективності інтернет-ресурсів</li>
+                        <li>Оптимізація системи роботи з лідами на підприємствах</li>
+                        <li>Розробка та ведення Telegram боту для оптимізації роботи співробітників</li>
+                    </ul>
+                    <h5>Незалежна оцінка персоналу </h5>
+                    <ul>
+                        <li>Онлайн-тестування</li>
+                        <li>Оцінка потенціалу співробітників</li>
+                        <li>Конкурси професійного майстерства</li>
+                    </ul>
+                    <h5>Технічне навчання персоналу, що працює з технікою</h5>
+                    <ul>
+                        <li>Електрика та електричне обладнання</li>
+                        <li>Гідравліка та гідравлічне обладнання</li>
+                        <li>Дизельне впорскування</li>
+                        <li>Системи комфорту</li>
+                        <li>Тощо</li>
+                    </ul>
                 </div>
+                <a href="solutions.html" class="mb-4 mb-lg-0">
+                    Докладніше
+                </a>
             </div>
-            <div class="col-md-6 px-0">
+
+            <div class="col">
                 <div class="img-box ">
-                    <img src="images/about-img.jpg" class="box_img" alt="about img">
+                    <img src="images/about-img.jpg" class="img-fluid" alt="about img">
                 </div>
             </div>
         </div>
