--- a/finter-html/index.html
+++ b/finter-html/index.html
@@ -42,44 +42,41 @@
     <div class="hero_bg_box">
         <img src="images/bigseria.jpg" alt="background">
     </div>
-
-    <!-- header contact section strats -->
+    <!-- header section strats -->
     <header class="header_section">
         <div class="header_top">
             <div class="container-fluid header_top_container">
+
                 <div class="contact_nav">
-                    <a href="tel:+380994218007" aria-hidden="true">
+                    <a href="tel:+380994218007">
                         <i class="fa fa-phone" aria-hidden="true"></i>
                         <span>
                 +38(099) 421 80 07
               </span>
                     </a>
-                    <a href="mailto:m.gronskaya@fieldforce.consulting" aria-hidden="true">
+                    <a href="mailto:m.gronskaya@fieldforce.consulting">
                         <i class="fa fa-envelope" aria-hidden="true"></i>
-                        <span>m.gronskaya@fieldforce.consulting</span>
+                        <span>
+                m.gronskaya@fieldforce.consulting
+              </span>
                     </a>
                 </div>
-
-                <!--social box-->
-                <!--                <div class="social_box">
-                                    <a href="">
-                                        <i class="fa fa-facebook" aria-hidden="true"></i>
-                                    </a>
-                                    <a href="">
-                                        <i class="fa fa-twitter" aria-hidden="true"></i>
-                                    </a>
-                                    <a href="">
-                                        <i class="fa fa-linkedin" aria-hidden="true"></i>
-                                    </a>
-                                    <a href="">
-                                        <i class="fa fa-instagram" aria-hidden="true"></i>
-                                    </a>
-                                </div>-->
+                <!-- <div class="social_box">
+                     <a href="">
+                         <i class="fa fa-facebook" aria-hidden="true"></i>
+                     </a>
+                     <a href="">
+                         <i class="fa fa-twitter" aria-hidden="true"></i>
+                     </a>
+                     <a href="">
+                         <i class="fa fa-linkedin" aria-hidden="true"></i>
+                     </a>
+                     <a href="">
+                         <i class="fa fa-instagram" aria-hidden="true"></i>
+                     </a>
+                 </div>-->
             </div>
         </div>
-        <!-- header contact section ends -->
-
-        <!-- header nav section starts -->
         <div class="header_bottom">
             <div class="container-fluid">
                 <nav class="navbar navbar-expand-lg custom_nav-container ">
@@ -93,21 +90,20 @@
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav  ">
-                            <li class="nav-item ">
-                                <a class="nav-link" href="index.html" aria-label="Main page">Головна</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="about.html" aria-label="Our services">Наші послуги</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="clients.html" aria-label="Our clients">Наші клієнти</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="team.html" aria-label="Our team">Команда</a>
-                            </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="contact.html" aria-label="Contact information">Контакти<span
-                                        class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="index.html">Головна<span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="about.html">Наші послуги</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="clients.html">Наші клієнти</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="team.html">Команда</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contact.html">Контакти</a>
                             </li>
                         </ul>
                     </div>
@@ -115,9 +111,7 @@
             </div>
         </div>
     </header>
-</div>
-<!-- end header section -->
-
+    <!-- end header section -->
     <!-- slider section -->
     <section class="slider_section ">
         <div id="customCarousel1" class="carousel slide" data-ride="carousel">
@@ -212,10 +206,10 @@
 <section class="service_section layout_padding">
     <div class="container">
         <div class="heading_container heading_center ">
-            <h2 class="">
+            <h2 class="pb-3">
                 Наші послуги
             </h2>
-            <p class="col-lg-8 px-0">
+            <p class="col-lg-8 px-0 text-left">
                 Компанія <strong>Field Force Consulting</strong> надає структурну підтримку офіційним імпортерам,
                 дистриб'юторам та
                 дилерським мережам. Головні напрямки – сільськогосподарське машинобудування
@@ -320,10 +314,10 @@
 <section class="about_section">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-5 offset-md-1">
+            <div class="col-md-5 offset-md-1 ">
                 <div class="detail-box pr-md-2">
-                    <div class="heading_container">
-                        <h2 class="">
+                    <div class="heading_container heading_center">
+                        <h2 class="text-md-left">
                             Про нас
                         </h2>
                     </div>
@@ -368,10 +362,10 @@
 <section class="team_section layout_padding">
     <div class="container">
         <div class="heading_container heading_center">
-            <h2>
+            <h2 class="mb-4 ">
                 Наша команда
             </h2>
-            <p>
+            <p class="text-left">
                 Експерти, яких ми залучаємо – це професіонали різних сфер діяльності, що допомагають вирішувати
                 багатоманітні задачі, такі як проведення тренінгів, реалізація маркетингових заходів, експертна оцінка
                 процесів та спеціалістів, консалтинг і багато іншого. Об’єднання їхніх зусиль для вирішення задач,
@@ -627,33 +621,45 @@
                     <div class="heading_container heading_center">
                         <h2>Написати нам</h2>
                     </div>
-                    <form action="">
-                        <div class="form-row">
-                            <div class="form-group col">
-                                <input type="text" class="form-control" placeholder="Ім'я та прізвище"/>
+                    <p class="pb-2 text-center">Ми відкриті для питань і уточнень</p>
+                        <form action="">
+                            <div class="form-row justify-content-start">
+                                <div class="form-group col">
+                                    <label for="nameField" class="is-hidden"></label><input
+                                        id="nameField" type="text" class="form-control" placeholder="Ім'я та прізвище"
+                                        aria-label="Enter your name"/>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group col">
-                                <input type="text" class="form-control" placeholder="Номер телефону"/>
+                            <div class="form-row">
+                                <div class="form-group col">
+                                    <label for="phoneField" class="is-hidden"></label><input
+                                        id="phoneField" type="text" class="form-control" placeholder="Номер телефону"
+                                        aria-label="Enter your phone number"/>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group col">
-                                <input type="email" class="form-control" placeholder="E-mail"/>
+                            <div class="form-row">
+                                <div class="form-group col">
+                                    <label for="mailField" class="is-hidden"></label><input id="mailField"
+                                                                                                          type="email"
+                                                                                                          class="form-control"
+                                                                                                          placeholder="E-mail"
+                                                                                                          required
+                                                                                                          aria-label="Enter your e-mail"/>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group col">
-                                <input type="text" class="message-box form-control" placeholder="Текст листа"/>
+                            <div class="form-row">
+                                <div class="form-group col">
+                                    <label for="textField" class="is-hidden"></label><input
+                                        id="textField" type="text" class="message-box form-control"
+                                        placeholder="Текст листа" aria-label="Enter additional text"/>
+                                </div>
                             </div>
-                        </div>
-                        <div class="btn_box">
-                            <button>
-                                НАДІСЛАТИ
-                            </button>
-                        </div>
-                    </form>
+                            <div class="btn_box">
+                                <button aria-label="Send contact info">
+                                    НАДІСЛАТИ
+                                </button>
+                            </div>
+                        </form>
                 </div>
             </div>
         </div>
