--- a/finter-html/team.html
+++ b/finter-html/team.html
@@ -154,7 +154,7 @@
                     <div class="card bg-light h-100">
                         <img src="images/team/vyacheslav.jpg" class="card-img-top" alt="team member">
                         <div class="card-body">
-                            <h5 class="card-title" style="color: #004445"><strong>ШОСТАК ВЯЧЕСЛАВ</strong></h5>
+                            <h5 class="card-title text-center" style="color: #004445"><strong>ШОСТАК ВЯЧЕСЛАВ</strong></h5>
                             <h6 class="card-subtitle mt-2 py-3 border-bottom border-darkgreen">УПРАВЛЯЮЧИЙ ПАРТНЕР</h6>
                             <p class="card-text mt-2">Майстер-тренер. <br>
                                 Експерт в автомобільному та аграрному бізнесі,
@@ -168,7 +168,7 @@
                     <div class="card bg-light h-100">
                         <img src="images/team/maria.jpg" class="card-img-top" alt="team member">
                         <div class="card-body">
-                            <h5 class="card-title" style="color: #004445"><strong>ГРОНСЬКА МАРІЯ</strong></h5>
+                            <h5 class="card-title text-center" style="color: #004445"><strong>ГРОНСЬКА МАРІЯ</strong></h5>
                             <h6 class="card-subtitle mt-2 py-3 border-bottom border-darkgreen">ДИРЕКТОР ПО РОБОТІ З
                                 КЛІЄНТАМИ</h6>
                             <p class="card-text mt-2">Тренер-консультант. <br>
@@ -181,7 +181,7 @@
                     <div class="card  bg-light h-100">
                         <img src="images/team/cat.jpg" class="card-img-top" alt="team member">
                         <div class="card-body">
-                            <h5 class="card-title" style="color: #004445"><strong>ШОСТАК ВОЛЬТ</strong></h5>
+                            <h5 class="card-title text-center" style="color: #004445"><strong>ШОСТАК ВОЛЬТ</strong></h5>
                             <h6 class="card-subtitle mt-2 py-3 border-bottom border-darkgreen">ГОЛОВНИЙ ПО
                                 МУРКЕТИНГУ</h6>
                             <p class="card-text mt-2">Тренер-консультант. <br>
