index.html service section edited

--- a/finter-html/index.html
+++ b/finter-html/index.html
@@ -219,24 +219,6 @@
         <div class="service_container">
             <div class="carousel-wrap ">
                 <div class="service_owl-carousel owl-carousel">
-                    <div class="item" >
-                        <div class="box ">
-                            <div class="img-box">
-                                <img src="./images/icons/tractor-solid.svg" alt="icon">
-                            </div>
-
-                            <div class="detail-box">
-                                <h5>
-                                    ТЕХНІЧНЕ НАВЧАННЯ ПЕРСОНАЛУ</h5>
-                                <ul>
-                                    <li>Електрика, електричне обладнання</li>
-                                    <li>Гідравліка, гідравлічне обладнання</li>
-                                    <li>Дизельне впорскування</li>
-                                    <li>Системи комфорту тощо</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
 
 
                     <div class="item">
@@ -259,9 +241,28 @@
                         </div>
                     </div>
 
-                    <div class="item">
+
+                    <div class="item" >
                         <div class="box ">
                             <div class="img-box">
+                                <img src="./images/icons/tractor-solid.svg" alt="icon">
+                            </div>
+                            <div class="detail-box">
+                                <h5>
+                                    ТЕХНІЧНЕ НАВЧАННЯ ПЕРСОНАЛУ</h5>
+                                <ul>
+                                    <li>Електрика, електричне обладнання</li>
+                                    <li>Гідравліка, гідравлічне обладнання</li>
+                                    <li>Дизельне впорскування</li>
+                                    <li>Системи комфорту тощо</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="box ">
+                            <div class="img-box2">
                                 <img src="./images/icons/globe-solid.svg" alt="icon">
                             </div>
                             <div class="detail-box">
@@ -271,7 +272,7 @@
                                 <ul>
                                     <li>Система комплексного моніторингу KPI підприємства</li>
                                     <li>Оцінка ефективності інтернет-ресурсів</li>
-                                    <li>Оптимізація системи роботи з лідами на підприємствах</li>
+                                    <li>Оптимізація системи роботи з лідами</li>
                                     <li>Розробка та ведення Telegram боту для оптимізації роботи співробітників</li>
                                 </ul>
                             </div>
@@ -306,7 +307,6 @@
         </div>
     </div>
 </section>
-
 <!-- service section ends -->
 
 <!-- about section -->
@@ -341,9 +341,10 @@
                         Експерти, яких залучає Field Force Consulting до роботи з клієнтами отримали багаторічний досвід
                         практичної роботи з кращими автомобільними компаніями та компаніями виробниками
                         сільськогосподарської техніки.</p>
-                    <a href="about.html" class="">
+                    <div class="text-center text-md-left"> <a href="about.html" class="">
                         Детальніше
-                    </a>
+                    </a></div>
+
                 </div>
             </div>
             <div class="col-md-6 px-0">
