js errors fixed; autoplayTimeout in owl-carousel edited

--- a/finter-html/team.html
+++ b/finter-html/team.html
@@ -140,7 +140,7 @@
             <li>Процес сервісного обслуговування / Керування процесом сервісного обслуговування</li>
             <li>Управління складськими запасами</li>
             <li>Активний продаж запчастин</li>
-            <li>Клієнторієнтованість</li>
+            <li>Клієнтоорієнтованість</li>
             <li>Комунікація</li>
             <li>Агрономія</li>
             <li>Вторинна переробка</li>
